--- a/src/components/app.css
+++ b/src/components/app.css
@@ -2,37 +2,91 @@
     box-sizing: border-box;
 }
 
+body {
+    width: 100%;
+    margin: 0 auto;
+}
+
 .container {
     display: flex;
     flex-direction: column;
     justify-content: center;
     align-items: center;
+    background:#f5f5f5;
+}
+
+h1 {
+    text-align: center;
+    color: #dddddd;
+    text-shadow: 0 2px 3px #000;
+
 }
 
 .input_container {  
-    margin-top: 100px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    height:98vh;
+    width: 100%;
     margin-bottom: 100px;
+    background: url('../img/background-search.jpg') ;
+    background-size: cover;
+    box-shadow: 0 3px 15px black;
 }
 
 .term_input {
     height: 50px;
+    text-transform: uppercase;
     border-left: none;
+    align-self: center;
+    width: 300px;
     border-top: none;
     border-right: none;
     box-shadow: 0 1px 5px black;
+    outline: none;
+    transition: .5s all;
+    text-align: center;
     font-size: 25px;
 }
+
+.term_input:focus {
+    border-radius: 20px;
+}
+
 .btn_search {
     color: #dddddd;
+    align-self: center;
+    cursor: pointer;
     background-color: rgb(54, 54, 54);
     border: none;
     border-radius: 5px;
     height:45px;
     width: 200px;
     text-align: center;
-    margin-left: 85px;
     font-size: 25px;
     margin-top: 15px;
+    transition: .5s all;
     display: block;
     font-weight: bolder;
+}
+
+.btn_search:hover {
+    background-color: #ddd;
+    color: rgb(54, 54, 54);    
+}
+
+.btn_search:active {
+   background: #000; 
+}
+
+.recipe_container {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+
+.recipe {
+    text-align: center;
+    border: 1px solid #dddddd;
+    margin: 15px; 
 }
