--- a/src/components/app.css
+++ b/src/components/app.css
@@ -90,3 +90,21 @@ h1 {
     border: 1px solid #dddddd;
     margin: 15px; 
 }
+
+.recipe_link {
+    color: #f5f5f5;
+    font-weight: bolder;
+    text-decoration: none;
+    display: block;
+    height: 30px;
+    padding: 5px;
+    border-radius: 15px;
+    background: #000;
+    margin-bottom: 10px;
+    border: 2px solid #f5f5f5;
+}
+
+.recipe_link:hover {
+    background: #cac5c5;
+    color: #000;
+}
