--- a/src/components/app.css
+++ b/src/components/app.css
@@ -22,6 +22,10 @@ h1 {
 
 }
 
+.recipe_term {
+    align-self: center
+}
+
 .input_container {  
     display: flex;
     flex-direction: column;
@@ -67,6 +71,8 @@ h1 {
     margin-top: 15px;
     transition: .5s all;
     display: block;
+    text-decoration: none;
+    padding: 8px;
     font-weight: bolder;
 }
 
@@ -107,4 +113,10 @@ h1 {
 .recipe_link:hover {
     background: #cac5c5;
     color: #000;
+}
+
+.recipe_container {
+    transition: all .5s;
+    margin-top: 0;
+    min-height: 300px;
 }
