--- a/src/components/app.css
+++ b/src/components/app.css
@@ -1,6 +1,8 @@
-*,*::before,*::after {
+*,
+*::before,
+*::after {
     -webkit-box-sizing: border-box;
-            box-sizing: border-box;
+    box-sizing: border-box;
 }
 
 body {
@@ -15,16 +17,16 @@ body {
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
+    -ms-flex-pack: center;
+    justify-content: center;
     max-width: 100%;
     -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
-    background:#f5f5f5;
+    -ms-flex-align: center;
+    align-items: center;
+    background: #f5f5f5;
 }
 
 h1 {
@@ -36,28 +38,28 @@ h1 {
 
 .recipe_term {
     -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center
+    -ms-grid-row-align: center;
+    align-self: center
 }
 
-.input_container {  
-    display: -webkit-box;  
-    display: -ms-flexbox;  
+.input_container {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
+    -ms-flex-direction: column;
+    flex-direction: column;
     -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    height:98vh;
+    -ms-flex-pack: center;
+    justify-content: center;
+    height: 98vh;
     width: 100%;
     margin-bottom: 100px;
-    background: url('../img/background-search.jpg') ;
+    background: url('../img/background-search.jpg');
     background-size: cover;
     -webkit-box-shadow: 0 3px 15px black;
-            box-shadow: 0 3px 15px black;
+    box-shadow: 0 3px 15px black;
 }
 
 .term_input {
@@ -65,13 +67,13 @@ h1 {
     text-transform: uppercase;
     border-left: none;
     -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    -ms-grid-row-align: center;
+    align-self: center;
     width: 300px;
     border-top: none;
     border-right: none;
     -webkit-box-shadow: 0 1px 5px black;
-            box-shadow: 0 1px 5px black;
+    box-shadow: 0 1px 5px black;
     outline: none;
     -webkit-transition: .5s all;
     -o-transition: .5s all;
@@ -87,13 +89,13 @@ h1 {
 .btn_search {
     color: #dddddd;
     -ms-flex-item-align: center;
-        -ms-grid-row-align: center;
-        align-self: center;
+    -ms-grid-row-align: center;
+    align-self: center;
     cursor: pointer;
     background-color: rgb(54, 54, 54);
     border: none;
     border-radius: 5px;
-    height:45px;
+    height: 45px;
     width: 200px;
     text-align: center;
     font-size: 25px;
@@ -109,11 +111,11 @@ h1 {
 
 .btn_search:hover {
     background-color: #ddd;
-    color: rgb(54, 54, 54);    
+    color: rgb(54, 54, 54);
 }
 
 .btn_search:active {
-   background: #000; 
+    background: #000;
 }
 
 .recipe_container {
@@ -121,15 +123,15 @@ h1 {
     display: -ms-flexbox;
     display: flex;
     -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     -ms-flex-pack: distribute;
-        justify-content: space-around;
+    justify-content: space-around;
 }
 
 .recipe {
     text-align: center;
     border: 1px solid #dddddd;
-    margin: 15px; 
+    margin: 15px;
 }
 
 .recipe_link {
